--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
       <label for="">Email address:</label>
       <input type="email" name="Your Email address" value="">
       <br>
-      <label for="">Message:</label>
+      <label for="">Message:</label><br>
       <textarea name="Your Message" rows="5" cols="20"></textarea>
       <br>
       <input type="submit" name="" >
