--- a/contact.html
+++ b/contact.html
@@ -46,8 +46,9 @@
       <label for="">Email address:</label>
       <input type="email" name="Your Email address" value="">
       <br>
-      <label for="">Message:</label><br>
+      <label for="">Message:</label><p>
       <textarea name="Your Message" rows="5" cols="20"></textarea>
+      </p>
       <br>
       <input type="submit" name="" >
 
