--- a/contact.html
+++ b/contact.html
@@ -40,15 +40,14 @@
     <hr>
     <h3>Contact me</h3>
     <form class="" action="mailto:agrawal.prakhar35@gmail.com" method="post" enctype="text/plain">
-      <label for="">Name:</label>
+      <label for="">Name:</label><br>
       <input type="text" name="Your Name" value="">
       <br>
-      <label for="">Email address:</label>
+      <label for="">Email address:</label><br>
       <input type="email" name="Your Email address" value="">
       <br>
-      <label for="">Message:</label><p>
+      <label for="">Message:</label><br>
       <textarea name="Your Message" rows="5" cols="20"></textarea>
-      </p>
       <br>
       <input type="submit" name="" >
 
